[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "epicenter"
readme = "README.md"
categories = ["asynchronous"]
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/m1guelpf/epicenter"
description = "Simple sync/async event dispatcher for Rust"
keywords = ["event-dispatcher", "event-listener", "event-system", "asynchronous", "synchronous"]

[dependencies]
thiserror = "1.0.51"
futures = { version = "0.3.29", optional = true }
tokio = { version = "1.35.0", features = ["sync"], optional = true }

[features]
default = ["async"]
async = ["dep:tokio", "dep:futures"]

[dev-dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread"] }
